--- a/scripts/03-Hyper_hypo_methylation.Rmd
+++ b/scripts/03-Hyper_hypo_methylation.Rmd
@@ -71,84 +71,100 @@ All_data_gene_names$rowInd <- c(1:1447)
 
 
 ```{r}
-
-
-
-
-
-
-
-
-
 zscore_modified <- zscore_df %>% 
-  rownames_to_column(., var = "meth_exp_group") %>% na.omit() %>%
-  gather("gene", "zscore", 2:1448) %>%
+  rownames_to_column(., var = "Sample.ID") %>% na.omit() %>%
+  gather("gene", "zscore", 2:last_col()) %>%
   left_join(., rowInd_df, by = "gene") %>%
   dplyr::rename(., rowInd = `heatmap_df$rowInd`) %>%
-  left_join(., All_data_gene_names, by = ("rowInd")) %>% #select(-c(6:58)) %>%
+  left_join(., All_data_gene_names %>% dplyr::select(rowInd, gene), by = ("rowInd")) %>% 
   dplyr::rename(., gene_number = gene.x) %>%
-  dplyr::rename(., gene = gene.y) %>% #left_join(., ploidyinfo, by=c("Sample.ID")) %>%
-  # mutate(meth_exp_group = case_when(
-  #   group == "Group1" ~ "T1",
-  #   group == "Group2" ~ "T1",
-  #   group == "Group3" ~ "T2",
-  #   group == "Group4" ~ "T2",
-  #   group == "Group5" ~ "D",
-  #   group == "Group6" ~ "D"
-  # )) %>%
-  dplyr::rename(meth_D = D) %>%
-  dplyr::rename(meth_T1 = T1) %>%
-  dplyr::rename(meth_T2 = T2) %>%
-  spread(meth_exp_group, zscore)
-zscore_modified$rowInd <- as.character(zscore_modified$rowInd)
-## now I can subset to the conditions I want 
+  dplyr::rename(., gene = gene.y) %>% 
+  left_join(., groups, by=c("Sample.ID")) 
 
-# Genes that are hypermethylated in Triploidy 2 (and not in Triploidy 1 or Diploidy) = 122 genes
-hypermeth_trip2 <- zscore_modified %>% filter(T2 > 1) 
-# Genes that are hypermethylated in Triploidy 1 (and not in Triploidy 2 or Diploidy)  = 138 genes
-hypermeth_trip1 <- zscore_modified %>% filter(T1 > 1) 
-# Genes that are hypermethylated in Diploidy (and not in Triploidy 2 or Triploidy 1)  = 460 genes
-hypermeth_dip <- zscore_modified %>% filter(D > 1) 
+### calculating median zscore per group
+zscore_median <- zscore_modified %>% group_by(meth_exp_group, gene) %>%
+  mutate(med_zscore = median(zscore)) %>% dplyr::select(gene, meth_exp_group, med_zscore) %>% distinct() %>%
+  spread(meth_exp_group, med_zscore)
 
-hypermeth_trip2 %>% write.csv("data/WGBS/output/DMG_hypermeth_triploidy2.csv")
-hypermeth_trip1 %>% write.csv("data/WGBS/output/DMG_hypermeth_triploidy1.csv")
-hypermeth_dip %>% write.csv("data/WGBS/output/DMG_hypermeth_diploidy.csv")
+# Genes that are hypermethylated in Triploidy 2 (and not in Triploidy 1 or Diploidy) = 101 genes
+hypermeth_trip2 <- zscore_median %>% filter(T2 > 0.75) 
+# Genes that are hypermethylated in Triploidy 1 (and not in Triploidy 2 or Diploidy)  = 70 genes
+hypermeth_trip1 <- zscore_median %>% filter(T1 > 0.75) 
+# Genes that are hypermethylated in Diploidy (and not in Triploidy 2 or Triploidy 1)  = 415 genes
+hypermeth_dip <- zscore_median %>% filter(D > 0.75) 
 
-hypermeth_trip2 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy2.csv")
-hypermeth_trip1 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy1.csv")
-hypermeth_dip <- read.csv("data/WGBS/output/DMG_hypermeth_diploidy.csv")
+# Genes that are hypomethylated in Triploidy 2 (and not in Triploidy 1 or Diploidy) = 272 genes
+hypometh_trip2 <- zscore_median %>% filter(T2 < -0.75) 
+# Genes that are hypomethylated in Triploidy 1 (and not in Triploidy 2 or Diploidy)  = 140 genes
+hypometh_trip1 <- zscore_median %>% filter(T1 < -0.75) 
+# Genes that are hypomethylated in Diploidy (and not in Triploidy 2 or Triploidy 1)  = 143 genes
+hypometh_dip <- zscore_median %>% filter(D < -0.75) 
+
+hypermeth_trip2 %>% write.csv("data/WGBS/DMG_hypermeth_triploidy2.csv")
+hypermeth_trip1 %>% write.csv("data/WGBS/DMG_hypermeth_triploidy1.csv")
+hypermeth_dip %>% write.csv("data/WGBS/DMG_hypermeth_diploidy.csv")
+
+hypometh_trip2 %>% write.csv("data/WGBS/DMG_hypometh_triploidy2.csv")
+hypometh_trip1 %>% write.csv("data/WGBS/DMG_hypometh_triploidy1.csv")
+hypometh_dip %>% write.csv("data/WGBS/DMG_hypometh_diploidy.csv")
 ```
 
-Plotting the hypermeth levels above 
+Plotting the hyper-meth/hypo-meth levels above 
 
 ```{r}
-#hypermeth_trip2_plot <- hypermeth_trip2 %>% 
-#hypermeth_trip1_plot <- hypermeth_trip1 %>% 
-hypermeth_dip_plot <- hypermeth_dip %>% 
-  dplyr::select(gene, meth_D, meth_T1, meth_T2) %>%
-  gather("meth_exp_group", "per.meth", 2:4) %>%
-    # mutate(loci_status = case_when(
-    #       per.meth <= 10 ~ "unmethylated",
-    #       per.meth > 10 & per.meth < 50 ~ "sparsely methylated",
-    #       per.meth >= 50 ~ "methylated")) %>%
-  ggplot(., aes(x=meth_exp_group, y=per.meth, color=meth_exp_group)) + theme_bw() + xlab("") +
-  geom_boxplot() + geom_jitter(size=1, alpha=0.3, width=0.2) + 
-  #facet_wrap(~loci_status, scales = "free_y") +
-  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
-  theme(strip.text.x = element_text(size = 10, color = "black", face = "bold"),
-        strip.text.y = element_text(size = 10, color = "black", face = "bold")) +
-  theme(strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"))
-
-ggsave(filename="data/WGBS/output/figures/hypermeth_dip.jpeg", 
-       plot=hypermeth_dip_plot, dpi=300, width=4, height=3, units="in")
+subset_gene_list <- hypometh_dip
 
 ## statistics on the above 
-hypermeth_stats <- hypermeth_trip2 %>% 
-  dplyr::select(gene, meth_D, meth_T1, meth_T2) %>%
-  gather("meth_exp_group", "per.meth", 2:4)
+ngenes = nrow(subset_gene_list)
+hypermeth_stats <- subset_gene_list %>% gather("group", "zscore", 2:last_col())
 
-aov <- aov(per.meth ~ meth_exp_group, data=hypermeth_stats)
+aov <- aov(zscore ~ group, data=hypermeth_stats)
 summary(aov)
 TukeyHSD(aov)
+
+subset_gene_list %>%
+    
+  gather("group", "zscore", 2:last_col()) %>%
+  ggplot(., aes(x=group, y=zscore, color=group)) + theme_bw() + 
+  labs(
+    x="Ploidy Group",
+    color="Ploidy Group"
+  ) +
+  ggtitle(
+    label = paste0("n = ", ngenes, " genes"),
+    subtitle = "ANOVA p-value = <2e-16"
+  ) +
+  geom_boxplot(outlier.shape=NA) + geom_jitter(size=1, alpha=0.3, width=0.2) +
+  
+  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
+  
+  theme(legend.position = "none",
+        panel.background=element_rect(fill='white', colour='black'),
+        axis.text.y = element_text(size=10, color="grey30"),
+        axis.text.x = element_text(size=10, color="grey30"),
+        plot.title = element_text(size=10, color="grey55", face = "italic"),
+        plot.subtitle = element_text(size=10, color="grey55", face = "italic"),
+        axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0), size=12, face="bold"),
+        axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0), size=12, face="bold"))
+
+ggsave(filename="data/figures/Zscore_hypometh_diploidy.jpeg", dpi=300, width=3.5, height=5, units="in")
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
