--- a/scripts/archive/GO-DMG.Rmd
+++ b/scripts/archive/GO-DMG.Rmd
@@ -65,35 +65,42 @@ library(Rmisc)
 ### Methylation data 
 
 ```{r}
-meth_table5x_filtered2 <- read.csv("data/WGBS/output/meth_table5x_filtered2.csv") %>% dplyr::select(-X)
+load("data/WGBS/meth_table5x_filtered2.RData") 
 #meth_table5x_filtered ## OR run this prior to GOseq large function 
 
-meth_table5x_filtered2_sigDMG <- read.csv("data/WGBS/output/meth_table5x_filtered2_sigDMG.csv") %>% dplyr::select(-X)
+load("data/WGBS/meth_table5x_filtered2_sigDMG.RData")
+#meth_table5x_filtered2_sigDMG <- read.csv("data/WGBS/output/meth_table5x_filtered2_sigDMG.csv") %>% dplyr::select(-X)
 ## OR run other script (DMG-Pacuta.Rmd) to create this file and then run this script
 
-hypermeth_trip2 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy2.csv") %>% dplyr::select(-X)
-hypermeth_trip1 <- read.csv("data/WGBS/output/DMG_hypermeth_triploidy1.csv") %>% dplyr::select(-X)
-hypermeth_dip <- read.csv("data/WGBS/output/DMG_hypermeth_diploidy.csv") %>% dplyr::select(-X)
+hypermeth_trip2 <- read.csv("data/WGBS/DMG_hypermeth_triploidy2.csv") 
+hypermeth_trip1 <- read.csv("data/WGBS/DMG_hypermeth_triploidy1.csv") 
+hypermeth_dip <- read.csv("data/WGBS/DMG_hypermeth_diploidy.csv") 
+hypometh_dip <- read.csv("data/WGBS/DMG_hypometh_diploidy.csv")
+hypometh_trip1 <- read.csv("data/WGBS/DMG_hypometh_triploidy1.csv")
+hypometh_trip2 <- read.csv("data/WGBS/DMG_hypometh_triploidy2.csv")
 
 hypermeth_trip2_GOlist <- meth_table5x_filtered2_sigDMG[meth_table5x_filtered2_sigDMG$gene %in% hypermeth_trip2$gene,]
 hypermeth_trip1_GOlist <- meth_table5x_filtered2_sigDMG[meth_table5x_filtered2_sigDMG$gene %in% hypermeth_trip1$gene,]
 hypermeth_dip_GOlist <- meth_table5x_filtered2_sigDMG[meth_table5x_filtered2_sigDMG$gene %in% hypermeth_dip$gene,]
+hypometh_dip_GOlist <- meth_table5x_filtered2_sigDMG[meth_table5x_filtered2_sigDMG$gene %in% hypometh_dip$gene,]
+hypometh_trip1_GOlist <- meth_table5x_filtered2_sigDMG[meth_table5x_filtered2_sigDMG$gene %in% hypometh_trip1$gene,]
+hypometh_trip2_GOlist <- meth_table5x_filtered2_sigDMG[meth_table5x_filtered2_sigDMG$gene %in% hypometh_trip2$gene,]
 ```
 
 ### Read in gff file to get lengths and merge with gene_meta created file
 
 ```{r}
 eggNOGG <- read.delim(file = "data/Pocillopora_acuta_HIv2.genes.EggNog_results.txt",
-                      sep = "\t", header=TRUE) %>% dplyr::rename(Gene = X.query)
+                      sep = "\t", header=TRUE) %>% dplyr::rename(gene = X.query)
 
-OE <- read.csv(file = "data/WGBS/Pacuta_CpGOE_full.csv", sep = ",",
-                 header = TRUE) 
+# OE <- read.csv(file = "data/WGBS/Pacuta_CpGOE_full.csv", sep = ",",
+#                  header = TRUE) 
 
 # there is a space after each gene name.. get rid of. This was some error in CpG_OE.Rmd script 
-OE$Gene <- gsub(" ","",OE$Gene)
+# OE$Gene <- gsub(" ","",OE$Gene)
 
 #merge with annotation information
-gene_meta <- dplyr::full_join(eggNOGG, OE, by = "Gene") %>% dplyr::rename(gene = Gene)
+# gene_meta <- dplyr::full_join(eggNOGG, OE, by = "Gene") %>% dplyr::rename(gene = Gene)
 
 gff <- read.delim("data/Pocillopora_acuta_HIv2.genes.gff3", 
                   sep = "\t", header = FALSE) %>% dplyr::rename(gene = V9) %>% 
@@ -106,7 +113,8 @@ gff <- read.delim("data/Pocillopora_acuta_HIv2.genes.gff3",
   dplyr::select(gene, Length)
 gff$Length <- as.numeric(gff$Length)
 
-gene_meta <- left_join(gene_meta, gff, by = "gene") 
+# gene_meta <- left_join(gene_meta, gff, by = "gene")
+gene_meta <- left_join(eggNOGG, gff, by = "gene")
 ```
 
 ### Setting up files for go enrichment
@@ -213,182 +221,181 @@ goenrich5x <- function(filename,
 ### Merge files of interest with annotation
 
 ```{r}
-## want to run the above function on: meth_table5x_filtered_sigDMG
-## this set is too big to run this dataframe. 
-# methgroup_GO_sig <- left_join(meth_table5x_filtered2_sigDMG, gene_meta, by = "gene")
-# GOenrich_sig5x <- goenrich5x(methgroup_GO_sig, meth_exp_group)
-# write.csv(GOenrich_sig5x , file = "data/WGBS/output/GOresults_methgroup_sig5x.csv")
-
-GOenrich_sig5x_annotated <- GOenrich_sig5x %>%
-  select(-GO_ID) %>%
-  filter(over_represented_pvalue != "NA") %>%
-  filter(!is.na(term)) %>%
-  distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns; 1,539 genes annotated with term 
-  mutate(GeneRatio = numDEInCat/numInCat)
-
-GOplot <- GOenrich_sig5x_annotated %>%
-  ggplot(aes(x = (GeneRatio*100), y = reorder(GOSlim_bin, GeneRatio), 
-             fill = over_represented_pvalue, size=numDEInCat)) +
-  xlab("% of genes involved") +
-  scale_y_discrete(position = "right") +
-  geom_hline(aes(yintercept = GOSlim_bin), linetype = "dotted", color = "grey") +
-  geom_point(shape = 21, color = "black") +
-  theme_bw() + 
-  theme(panel.grid.major = element_blank(),
-    panel.grid.minor = element_blank(), 
-    axis.line = element_line(colour = "black"),
-    legend.text=element_text(size=10), legend.title=element_text(size=10),
-    strip.text.y = element_text(size = 15),
-    strip.text.x = element_text(size = 15),
-    axis.text = element_text(size = 10, color = "black"),
-    axis.title.x = element_text(size = 15),
-    axis.title.y = element_blank(), 
-    legend.position = "right") 
-
-ggsave(filename="data/WGBS/output/figures/GOenrich_ploidy_bin_plot.png", 
-       plot=GOplot, dpi=300, width=8, height=8, units="in")
-
-GOplot2 <- GOenrich_sig5x_annotated %>%
-  #ggplot(aes(x = numDEInCat, y = reorder(term, numDEInCat), fill = over_represented_pvalue)) +
-  ggplot(aes(x = (GeneRatio*100), y = reorder(term, GeneRatio), 
-             fill = over_represented_pvalue, size=numDEInCat)) +
-  xlab("% of genes involved") +
-  scale_y_discrete(position = "right") +
-  geom_hline(aes(yintercept = term), linetype = "dotted", color = "grey") +
-  geom_point(shape = 21, color = "black") +
-  theme_bw() + theme(panel.grid.major = element_blank(),
-  panel.grid.minor = element_blank(), axis.line = element_line(colour = "black"),
-  strip.text.y = element_text(size = 12),
-  strip.text.x = element_text(size = 12),
-  axis.text = element_text(size = 12, color = "black"),
-  axis.title.x = element_text(size = 12),
-  axis.title.y = element_blank(), 
-  legend.position = "right") #+
-  #facet_grid(GOSlim_bin ~ ., scale = "free_y",
-            # labeller = label_wrap_gen(width = 2, multi_line = TRUE))
-
-ggsave(filename="data/WGBS/output/figures/GOenrich_ploidy_term_plot.png", 
-       plot=GOplot2, dpi=300, width=12, height=12, units="in")
+# ## want to run the above function on: meth_table5x_filtered_sigDMG
+# ## this set is too big to run this dataframe. 
+# # methgroup_GO_sig <- left_join(meth_table5x_filtered2_sigDMG, gene_meta, by = "gene")
+# # GOenrich_sig5x <- goenrich5x(methgroup_GO_sig, meth_exp_group)
+# # write.csv(GOenrich_sig5x , file = "data/WGBS/output/GOresults_methgroup_sig5x.csv")
+# 
+# GOenrich_sig5x_annotated <- GOenrich_sig5x %>%
+#   select(-GO_ID) %>%
+#   filter(over_represented_pvalue != "NA") %>%
+#   filter(!is.na(term)) %>%
+#   distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns; 1,539 genes annotated with term 
+#   mutate(GeneRatio = numDEInCat/numInCat)
+# 
+# GOplot <- GOenrich_sig5x_annotated %>%
+#   ggplot(aes(x = (GeneRatio*100), y = reorder(GOSlim_bin, GeneRatio), 
+#              fill = over_represented_pvalue, size=numDEInCat)) +
+#   xlab("% of genes involved") +
+#   scale_y_discrete(position = "right") +
+#   geom_hline(aes(yintercept = GOSlim_bin), linetype = "dotted", color = "grey") +
+#   geom_point(shape = 21, color = "black") +
+#   theme_bw() + 
+#   theme(panel.grid.major = element_blank(),
+#     panel.grid.minor = element_blank(), 
+#     axis.line = element_line(colour = "black"),
+#     legend.text=element_text(size=10), legend.title=element_text(size=10),
+#     strip.text.y = element_text(size = 15),
+#     strip.text.x = element_text(size = 15),
+#     axis.text = element_text(size = 10, color = "black"),
+#     axis.title.x = element_text(size = 15),
+#     axis.title.y = element_blank(), 
+#     legend.position = "right") 
+# 
+# ggsave(filename="data/WGBS/output/figures/GOenrich_ploidy_bin_plot.png", 
+#        plot=GOplot, dpi=300, width=8, height=8, units="in")
+# 
+# GOplot2 <- GOenrich_sig5x_annotated %>%
+#   #ggplot(aes(x = numDEInCat, y = reorder(term, numDEInCat), fill = over_represented_pvalue)) +
+#   ggplot(aes(x = (GeneRatio*100), y = reorder(term, GeneRatio), 
+#              fill = over_represented_pvalue, size=numDEInCat)) +
+#   xlab("% of genes involved") +
+#   scale_y_discrete(position = "right") +
+#   geom_hline(aes(yintercept = term), linetype = "dotted", color = "grey") +
+#   geom_point(shape = 21, color = "black") +
+#   theme_bw() + theme(panel.grid.major = element_blank(),
+#   panel.grid.minor = element_blank(), axis.line = element_line(colour = "black"),
+#   strip.text.y = element_text(size = 12),
+#   strip.text.x = element_text(size = 12),
+#   axis.text = element_text(size = 12, color = "black"),
+#   axis.title.x = element_text(size = 12),
+#   axis.title.y = element_blank(), 
+#   legend.position = "right") #+
+#   #facet_grid(GOSlim_bin ~ ., scale = "free_y",
+#             # labeller = label_wrap_gen(width = 2, multi_line = TRUE))
+# 
+# ggsave(filename="data/WGBS/output/figures/GOenrich_ploidy_term_plot.png", 
+#        plot=GOplot2, dpi=300, width=12, height=12, units="in")
 ```
 
 
 ### Subset to genes of interest 
 
 ```{r}
-unique(GOenrich_sig5x_annotated$GOSlim_bin)
-ERgolgi <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="ER/Golgi")
-cellORG <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="cell organization and biogenesis")
-RNAmetab <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="RNA metabolism")
-cellpro <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="cell cycle and proliferation")
-cyto <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="cytoskeleton")
-nuc <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="nucleus")
-othercyto <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other cytoplasmic organelle")
-dev <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="developmental processes")
-othcell <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other cellular component")
-othmetab <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other metabolic processes")
-protmetab <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="protein metabolism")
-othmolec <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other molecular function")
-othbio <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other biological processes")
-transport <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="transport")
-sig <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="signal transduction")
+# unique(GOenrich_sig5x_annotated$GOSlim_bin)
+# ERgolgi <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="ER/Golgi")
+# cellORG <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="cell organization and biogenesis")
+# RNAmetab <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="RNA metabolism")
+# cellpro <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="cell cycle and proliferation")
+# cyto <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="cytoskeleton")
+# nuc <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="nucleus")
+# othercyto <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other cytoplasmic organelle")
+# dev <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="developmental processes")
+# othcell <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other cellular component")
+# othmetab <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other metabolic processes")
+# protmetab <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="protein metabolism")
+# othmolec <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other molecular function")
+# othbio <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="other biological processes")
+# transport <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="transport")
+# sig <- GOenrich_sig5x_annotated %>% subset(GOSlim_bin=="signal transduction")
 ```
 
 ## Graph methylation levels 
 
 ```{r}
-## 699 genes in developmental processes 
-GOenrich_sig5x_dev <- GOenrich_sig5x %>%
-  subset(GOSlim_bin == "developmental processes") %>%
-  dplyr::select(gene) %>% distinct() %>%
-  left_join(., meth_table5x_filtered, by = "gene") %>%
-  group_by(Sample.ID, gene) %>%
-  mutate(mean = mean(per.meth)) %>% ungroup() %>%
-  group_by(Sample.ID) %>%
-  mutate(mean.sample = mean(mean)) %>% ungroup() %>%
-  group_by(treesplit, gene) %>%
-  mutate(mean.ploidy.gene = mean(mean)) %>% ungroup() %>%
-  filter(!is.na(treesplit)) %>%
-  dplyr::select(treesplit, mean.sample) %>% distinct()
-GOenrich_sig5x_dev$GOSlim_bin <- "developmental processes"
-
-## 430 genes in stress response 
-GOenrich_sig5x_stress <- GOenrich_sig5x %>%
-  subset(GOSlim_bin == "stress response") %>%
-  dplyr::select(gene) %>% distinct() %>%
-  left_join(., meth_table5x_filtered, by = "gene") %>%
-  group_by(Sample.ID, gene) %>%
-  mutate(mean = mean(per.meth)) %>% ungroup() %>%
-  group_by(Sample.ID) %>%
-  mutate(mean.sample = mean(mean)) %>% ungroup() %>%
-  group_by(treesplit, gene) %>%
-  mutate(mean.ploidy.gene = mean(mean)) %>% ungroup() %>%
-  filter(!is.na(treesplit)) %>%
-  dplyr::select(treesplit, mean.sample) %>% distinct()
-GOenrich_sig5x_stress$GOSlim_bin <- "stress response"
-
-GOenrich_subset <- bind_rows(GOenrich_sig5x_dev, GOenrich_sig5x_stress)
-
-GOenrich_subset %>% 
-  ggplot(., aes(x=treesplit, y=mean.sample, color=treesplit)) + 
-  geom_boxplot() + 
-  geom_jitter(alpha=0.1, width = 0.25) + 
-  facet_wrap(~GOSlim_bin, scales="free_y") +
-  theme_classic() + ylab("Methylation % per dinucleotide") + xlab("Ploidy") +
-  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
-  theme(strip.text.x = element_text(size = 12, color = "black", face = "bold"),
-        strip.text.y = element_text(size = 12, color = "black", face = "bold")) +
-  theme(strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"))
-
-aov <-aov(mean.sample ~ treesplit*GOSlim_bin, data=GOenrich_subset)
-summary(aov)
-TukeyHSD(aov)
+# ## 699 genes in developmental processes 
+# GOenrich_sig5x_dev <- GOenrich_sig5x %>%
+#   subset(GOSlim_bin == "developmental processes") %>%
+#   dplyr::select(gene) %>% distinct() %>%
+#   left_join(., meth_table5x_filtered, by = "gene") %>%
+#   group_by(Sample.ID, gene) %>%
+#   mutate(mean = mean(per.meth)) %>% ungroup() %>%
+#   group_by(Sample.ID) %>%
+#   mutate(mean.sample = mean(mean)) %>% ungroup() %>%
+#   group_by(treesplit, gene) %>%
+#   mutate(mean.ploidy.gene = mean(mean)) %>% ungroup() %>%
+#   filter(!is.na(treesplit)) %>%
+#   dplyr::select(treesplit, mean.sample) %>% distinct()
+# GOenrich_sig5x_dev$GOSlim_bin <- "developmental processes"
+# 
+# ## 430 genes in stress response 
+# GOenrich_sig5x_stress <- GOenrich_sig5x %>%
+#   subset(GOSlim_bin == "stress response") %>%
+#   dplyr::select(gene) %>% distinct() %>%
+#   left_join(., meth_table5x_filtered, by = "gene") %>%
+#   group_by(Sample.ID, gene) %>%
+#   mutate(mean = mean(per.meth)) %>% ungroup() %>%
+#   group_by(Sample.ID) %>%
+#   mutate(mean.sample = mean(mean)) %>% ungroup() %>%
+#   group_by(treesplit, gene) %>%
+#   mutate(mean.ploidy.gene = mean(mean)) %>% ungroup() %>%
+#   filter(!is.na(treesplit)) %>%
+#   dplyr::select(treesplit, mean.sample) %>% distinct()
+# GOenrich_sig5x_stress$GOSlim_bin <- "stress response"
+# 
+# GOenrich_subset <- bind_rows(GOenrich_sig5x_dev, GOenrich_sig5x_stress)
+# 
+# GOenrich_subset %>% 
+#   ggplot(., aes(x=treesplit, y=mean.sample, color=treesplit)) + 
+#   geom_boxplot() + 
+#   geom_jitter(alpha=0.1, width = 0.25) + 
+#   facet_wrap(~GOSlim_bin, scales="free_y") +
+#   theme_classic() + ylab("Methylation % per dinucleotide") + xlab("Ploidy") +
+#   scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) +
+#   theme(strip.text.x = element_text(size = 12, color = "black", face = "bold"),
+#         strip.text.y = element_text(size = 12, color = "black", face = "bold")) +
+#   theme(strip.background = element_rect(color="black", fill="white", linewidth=0.5, linetype="solid"))
+# 
+# aov <-aov(mean.sample ~ treesplit*GOSlim_bin, data=GOenrich_subset)
+# summary(aov)
+# TukeyHSD(aov)
 ```
 
 
-
 ```{r}
-GOenrich_sig5x_subset <- GOenrich_sig5x %>%
-  subset(GOSlim_bin == "stress response" | GOSlim_bin == "developmental processes")
-
-DMG_ploidysig ### gene counts data from Targeted-GE script (Vst transformed)
-meth_table5x_filtered ### meth counts from DMG-Pacuta script 
-
-DMG_ploidysig_GE <- meth_table5x_filtered[meth_table5x_filtered$gene %in% GOenrich_sig5x_subset$gene,]
-DMG_ploidysig_GE <- DMG_ploidysig_GE %>%
-  dplyr::select(gene, Sample.ID, per.meth, treesplit, ) %>%
-  group_by(gene, Sample.ID) %>%
-  mutate(mean.per.meth = mean(per.meth)) %>% ungroup() %>% dplyr::select(-per.meth) %>%
-  distinct() 
-DMG_ploidysig_GE$Sample.ID <- as.character(DMG_ploidysig_GE$Sample.ID)
-
-DMG_ploidysig2 <- DMG_ploidysig[DMG_ploidysig$gene %in% DMG_ploidysig_GE$gene,]
-DMG_ploidysig2 <- DMG_ploidysig2 %>% dplyr::select(gene, Sample.ID, count)
-
-DMG_ploidysig_GE <- DMG_ploidysig_GE %>% 
-  left_join(., DMG_ploidysig2, by = c("gene", "Sample.ID"))
-
-DMG_ploidysig_GE_summary <- summarySE(data=DMG_ploidysig_GE, measurevar = "count", 
-                                      groupvars = c("Sample.ID", "treesplit"), na.rm = TRUE)
-  
-DMG_ploidysig_GE_summary <- DMG_ploidysig_GE_summary %>%
-  mutate(CV = (sd/count)*100,
-         inv_CV = (1/CV),
-         log_expression = log10(count+1))
-
-DMG_ploidysig_GE_summary %>%
-  filter(!is.na(treesplit)) %>%
-  gather("measurement", "value", 8:10) %>%
-  subset(!measurement=="inv_CV") %>%
-  ggplot(., aes(x=treesplit, y=value, color=treesplit)) + 
-  facet_wrap(~measurement, scales="free_y") +
-  geom_boxplot() + 
-  geom_jitter(alpha=0.1, width = 0.25) +
-  theme_classic() + 
-  scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) 
-
-aov <-aov(CV ~ treesplit, data=DMG_ploidysig_GE_summary)
-summary(aov)
-TukeyHSD(aov)
+# GOenrich_sig5x_subset <- GOenrich_sig5x %>%
+#   subset(GOSlim_bin == "stress response" | GOSlim_bin == "developmental processes")
+# 
+# DMG_ploidysig ### gene counts data from Targeted-GE script (Vst transformed)
+# meth_table5x_filtered ### meth counts from DMG-Pacuta script 
+# 
+# DMG_ploidysig_GE <- meth_table5x_filtered[meth_table5x_filtered$gene %in% GOenrich_sig5x_subset$gene,]
+# DMG_ploidysig_GE <- DMG_ploidysig_GE %>%
+#   dplyr::select(gene, Sample.ID, per.meth, treesplit, ) %>%
+#   group_by(gene, Sample.ID) %>%
+#   mutate(mean.per.meth = mean(per.meth)) %>% ungroup() %>% dplyr::select(-per.meth) %>%
+#   distinct() 
+# DMG_ploidysig_GE$Sample.ID <- as.character(DMG_ploidysig_GE$Sample.ID)
+# 
+# DMG_ploidysig2 <- DMG_ploidysig[DMG_ploidysig$gene %in% DMG_ploidysig_GE$gene,]
+# DMG_ploidysig2 <- DMG_ploidysig2 %>% dplyr::select(gene, Sample.ID, count)
+# 
+# DMG_ploidysig_GE <- DMG_ploidysig_GE %>% 
+#   left_join(., DMG_ploidysig2, by = c("gene", "Sample.ID"))
+# 
+# DMG_ploidysig_GE_summary <- summarySE(data=DMG_ploidysig_GE, measurevar = "count", 
+#                                       groupvars = c("Sample.ID", "treesplit"), na.rm = TRUE)
+#   
+# DMG_ploidysig_GE_summary <- DMG_ploidysig_GE_summary %>%
+#   mutate(CV = (sd/count)*100,
+#          inv_CV = (1/CV),
+#          log_expression = log10(count+1))
+# 
+# DMG_ploidysig_GE_summary %>%
+#   filter(!is.na(treesplit)) %>%
+#   gather("measurement", "value", 8:10) %>%
+#   subset(!measurement=="inv_CV") %>%
+#   ggplot(., aes(x=treesplit, y=value, color=treesplit)) + 
+#   facet_wrap(~measurement, scales="free_y") +
+#   geom_boxplot() + 
+#   geom_jitter(alpha=0.1, width = 0.25) +
+#   theme_classic() + 
+#   scale_colour_manual(values = c("skyblue3", "olivedrab4", "darkgreen")) 
+# 
+# aov <-aov(CV ~ treesplit, data=DMG_ploidysig_GE_summary)
+# summary(aov)
+# TukeyHSD(aov)
 ```
 
 ## Run GO term analysis on hypermeth subset from DMG-Pacuta.Rmd 
@@ -398,59 +405,109 @@ TukeyHSD(aov)
 hypermeth_trip2_GOlist <- hypermeth_trip2_GOlist %>% dplyr::select(gene) %>% distinct()
 hypermeth_trip2_GO <- left_join(hypermeth_trip2_GOlist, gene_meta, by = "gene")
 GOenrich_hypermeth_trip2 <- goenrich5x(hypermeth_trip2_GO, triploidy2)
-write.csv(GOenrich_hypermeth_trip2 , file = "data/WGBS/output/GOenrich_hypermeth_trip2.csv")
+write.csv(GOenrich_hypermeth_trip2 , file = "data/WGBS/GOenrich_hypermeth_trip2.csv", row.names = FALSE)
+
+hypometh_trip2_GOlist <- hypometh_trip2_GOlist %>% dplyr::select(gene) %>% distinct()
+hypometh_trip2_GO <- left_join(hypometh_trip2_GOlist, gene_meta, by = "gene")
+GOenrich_hypometh_trip2 <- goenrich5x(hypometh_trip2_GO, triploidy2)
+write.csv(GOenrich_hypometh_trip2 , file = "data/WGBS/GOenrich_hypometh_trip2.csv", row.names = FALSE)
 
 hypermeth_trip1_GOlist <- hypermeth_trip1_GOlist %>% dplyr::select(gene) %>% distinct()
 hypermeth_trip1_GO <- left_join(hypermeth_trip1, gene_meta, by = "gene")
 GOenrich_hypermeth_trip1 <- goenrich5x(hypermeth_trip1_GO, triploidy1)
-write.csv(GOenrich_hypermeth_trip1 , file = "data/WGBS/output/GOenrich_hypermeth_trip1.csv")
+write.csv(GOenrich_hypermeth_trip1 , file = "data/WGBS/GOenrich_hypermeth_trip1.csv", row.names = FALSE)
+
+hypometh_trip1_GOlist <- hypometh_trip1_GOlist %>% dplyr::select(gene) %>% distinct()
+hypometh_trip1_GO <- left_join(hypometh_trip1_GOlist, gene_meta, by = "gene")
+GOenrich_hypometh_trip1 <- goenrich5x(hypometh_trip1_GO, triploidy1)
+write.csv(GOenrich_hypometh_trip1 , file = "data/WGBS/GOenrich_hypometh_trip1.csv", row.names = FALSE)
 
 hypermeth_dip_GOlist <- hypermeth_dip_GOlist %>% dplyr::select(gene) %>% distinct()
 hypermeth_dip_GO <- left_join(hypermeth_dip, gene_meta, by = "gene")
 GOenrich_hypermeth_dip <- goenrich5x(hypermeth_dip_GO, diploidy)
-write.csv(GOenrich_hypermeth_dip , file = "data/WGBS/output/GOenrich_hypermeth_dip.csv")
+write.csv(GOenrich_hypermeth_dip , file = "data/WGBS/GOenrich_hypermeth_dip.csv", row.names = FALSE)
 
-GOenrich_hypermeth_dip <- read.csv("data/WGBS/output/GOenrich_hypermeth_dip.csv") %>% select(-X)
-GOenrich_hypermeth_trip1 <- read.csv("data/WGBS/output/GOenrich_hypermeth_trip1.csv") %>% select(-X)
-GOenrich_hypermeth_trip2 <- read.csv("data/WGBS/output/GOenrich_hypermeth_trip2.csv") %>% select(-X)
+hypometh_dip_GOlist <- hypometh_dip_GOlist %>% dplyr::select(gene) %>% distinct()
+hypometh_dip_GO <- left_join(hypometh_dip, gene_meta, by = "gene")
+GOenrich_hypometh_dip <- goenrich5x(hypometh_dip_GO, diploidy)
+write.csv(GOenrich_hypometh_dip , file = "data/WGBS/GOenrich_hypometh_dip.csv", row.names = FALSE)
+
+# GOenrich_hypermeth_dip <- read.csv("data/WGBS/output/GOenrich_hypermeth_dip.csv") 
+# GOenrich_hypermeth_trip1 <- read.csv("data/WGBS/output/GOenrich_hypermeth_trip1.csv") 
+# GOenrich_hypermeth_trip2 <- read.csv("data/WGBS/output/GOenrich_hypermeth_trip2.csv") 
 
 ### no. annotated / total no. genes 
-## trip2 = 72 / 122  
-## trip1 = 60 / 138 
-## dip = 78 / 460 
-#unique(GOenrich_hypermeth_dip_annotated$gene)
+## HYPER trip2 = 53 / 101  
+## HYPER trip1 = 35 / 70 
+## HYPER dip = 100 / 415 
+## HYPO trip2 = 56 / 272
+## HYPO trip1 =  62 / 140
+## HYPO dip = 56 / 143 
 
+length(unique(GOenrich_hypometh_dip_annotated$gene))
+
+## TRIP 2
 GOenrich_hypermeth_trip2_annotated <- GOenrich_hypermeth_trip2 %>%
   dplyr::select(-GO_ID) %>%
   filter(over_represented_pvalue != "NA") %>%
   filter(!is.na(term)) %>%
   distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns
   mutate(GeneRatio = numDEInCat/numInCat) %>%
-  mutate(category = "triploidy 2")
+  mutate(category = "hyper triploidy 2")
 
-## 60 annotated 
+GOenrich_hypometh_trip2_annotated <- GOenrich_hypometh_trip2 %>%
+  dplyr::select(-GO_ID) %>%
+  filter(over_represented_pvalue != "NA") %>%
+  filter(!is.na(term)) %>%
+  distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns
+  mutate(GeneRatio = numDEInCat/numInCat) %>%
+  mutate(category = "hypo triploidy 2")
+
+## TRIP 1
 GOenrich_hypermeth_trip1_annotated <- GOenrich_hypermeth_trip1 %>%
   dplyr::select(-GO_ID) %>%
   filter(over_represented_pvalue != "NA") %>%
   filter(!is.na(term)) %>%
   distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns; 139/399 genes annotated with term 
   mutate(GeneRatio = numDEInCat/numInCat) %>%
-  mutate(category = "triploidy 1")
+  mutate(category = "hyper triploidy 1")
 
-## 78 annotated 
+GOenrich_hypometh_trip1_annotated <- GOenrich_hypometh_trip1 %>%
+  dplyr::select(-GO_ID) %>%
+  filter(over_represented_pvalue != "NA") %>%
+  filter(!is.na(term)) %>%
+  distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns; 139/399 genes annotated with term 
+  mutate(GeneRatio = numDEInCat/numInCat) %>%
+  mutate(category = "hypo triploidy 1")
+
+## DIPLOIDY 
 GOenrich_hypermeth_dip_annotated <- GOenrich_hypermeth_dip %>%
   dplyr::select(-GO_ID) %>%
   filter(over_represented_pvalue != "NA") %>%
   filter(!is.na(term)) %>%
   distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns; 470/1,056 genes annotated with term 
   mutate(GeneRatio = numDEInCat/numInCat) %>%
-  mutate(category = "diploidy")
+  mutate(category = "hyper diploidy")
+
+GOenrich_hypometh_dip_annotated <- GOenrich_hypometh_dip %>%
+  dplyr::select(-GO_ID) %>%
+  filter(over_represented_pvalue != "NA") %>%
+  filter(!is.na(term)) %>%
+  distinct(gene, .keep_all = TRUE) %>% #keep_all = keep all columns; 470/1,056 genes annotated with term 
+  mutate(GeneRatio = numDEInCat/numInCat) %>%
+  mutate(category = "hypo diploidy")
 
 # making large dataframe of them altogether 
 GOenrich_hypermeth_annotated_total <- 
   bind_rows(GOenrich_hypermeth_trip2_annotated, 
             GOenrich_hypermeth_trip1_annotated, GOenrich_hypermeth_dip_annotated)
+
+GOenrich_hypometh_annotated_total <- 
+  bind_rows(GOenrich_hypometh_trip2_annotated, 
+            GOenrich_hypometh_trip1_annotated, GOenrich_hypometh_dip_annotated)
 ```
+
+Left off at plotting these nicely 
 
 ```{r}
 GOplot_bin_hypermeth <- GOenrich_hypermeth_annotated_total %>%
@@ -485,7 +542,7 @@ my.order <- c("cytoskeletal activity", "kinase activity", "nucleic acid binding 
               "other molecular function", "signal transduction activity", "transporter activity")
 
 GOplot_bin_hypermeth2 <- GOenrich_hypermeth_annotated_total %>%
-  filter(ontology == "MF") %>% 
+  filter(ontology == "BP") %>% 
   #ggplot(aes(x = numDEInCat, y = reorder(term, numDEInCat), fill = over_represented_pvalue)) +
   ggplot(aes(x = category, 
              y = reorder(term, desc(GOSlim_bin)), 
@@ -509,8 +566,8 @@ GOplot_bin_hypermeth2 <- GOenrich_hypermeth_annotated_total %>%
   facet_grid(GOSlim_bin~., scale = "free_y",
            labeller = label_wrap_gen(width = 2, multi_line = TRUE))
 
-ggsave(filename="data/WGBS/output/figures/GOenrich_ploidy_BPterm_plot_hypermeth2.png", 
-       plot=GOplot_bin_hypermeth2, dpi=300, width=12, height=8, units="in")
+ggsave(filename="data/figures/GOenrich_ploidy_BPterm_plot_hypermeth2.png", 
+       plot=GOplot_bin_hypermeth2, dpi=300, width=12, height=12, units="in")
 ```
 
 
